Changes:  - add navigation bar  - test TitleView in Navigation page  - test ss on a specific element -- works ok  - save SS stream in a file in local folter of the app  - share file using share from Xamarin Essentials

--- a/HabitsTracker/HabitsTracker/HabitsTracker.csproj
+++ b/HabitsTracker/HabitsTracker/HabitsTracker.csproj
@@ -18,6 +18,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview3" />
+		<PackageReference Include="ImageFromXamarinUI" Version="1.0.0" />
 		<PackageReference Include="Resizetizer.NT" Version="0.3.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
