--- a/HabitsTracker/HabitsTracker.iOS/HabitsTracker.iOS.csproj
+++ b/HabitsTracker/HabitsTracker.iOS/HabitsTracker.iOS.csproj
@@ -126,6 +126,9 @@
     <PackageReference Include="CommunityToolkit.Mvvm">
       <Version>8.0.0-preview3</Version>
     </PackageReference>
+    <PackageReference Include="ImageFromXamarinUI">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Resizetizer.NT">
       <Version>0.3.0</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
