--- a/HabitsTracker/HabitsTracker.csproj
+++ b/HabitsTracker/HabitsTracker.csproj
@@ -40,7 +40,7 @@
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" />
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#FFD700" BaseSize="228,228" />
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 		<!-- Fonts -->
